--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ p {
 .header .container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 .nav {
   display: inherit;
@@ -97,6 +96,7 @@ p {
 
 .contacts .link {
   color: var(--secondary-text);
+  font-weight: 400;
 }
 
 .nav .link:hover,
@@ -107,14 +107,12 @@ p {
 }
 
 /*   !HERO   */
-.hero {
-  background-color: var(--prime-text);
-}
 
-.hero .container {
+.hero {
   padding-top: 188px;
   padding-bottom: 188px;
 
+  background-color: var(--prime-text);
   text-align: center;
 }
 
@@ -180,18 +178,12 @@ p {
 
 .column-flexlist {
   display: flex;
-  flex-wrap: wrap;
   gap: 24px;
 }
 
-.column-flexlist .item {
-  display: inline-flex;
-  flex-direction: column;
-  max-width: 264px;
-  gap: 8px;
-}
-
 .list-title {
+  margin-bottom: 8px;
+
   font-size: 20px;
   font-weight: 500;
   line-height: calc(24 / 20);
@@ -227,20 +219,23 @@ p {
 }
 
 .team .item {
-  display: flex;
-  flex-direction: column;
   background-color: var(--background-prime);
-  gap: 32px;
-  align-items: center;
-  padding-bottom: 32px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
-.team .item-content {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  min-width: 232px;
-  align-items: center;
+.team-title {
+  margin-bottom: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+.team .text {
+  text-align: center;
+  line-height: 1.2;
 }
 
 /*   !PORTFOLIO */
@@ -261,14 +256,8 @@ p {
   margin-bottom: 72px;
 }
 
-.portfolio .item-content {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  border-right: 1px solid var(--footer-text);
-  border-left: 1px solid var(--footer-text);
-  border-bottom: 1px solid var(--footer-text);
-  padding: 32px 16px;
+.item-content {
+  padding: 32px 0;
 }
 
 .portfolio-cards {
@@ -277,7 +266,7 @@ p {
 }
 
 .portfolio-cards .card {
-  margin-bottom: 47px;
+  margin-bottom: 48px;
   margin-right: 24px;
 }
 .portfolio-cards .card:nth-last-child(-n + 3) {
@@ -292,7 +281,7 @@ p {
 .footer {
   background-color: var(--prime-text);
 }
-.footer .container {
+.footer {
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -306,8 +295,7 @@ p {
 }
 
 .footer .text {
-  display: block;
-  max-width: 264px;
-
+  line-height: 1.5;
+  width: 264px;
   color: var(--footer-text);
 }
