--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ p {
   margin-right: auto;
   margin-left: auto;
   display: flex;
+  padding: 12px 24px;
 
   cursor: pointer;
 }
@@ -172,15 +173,13 @@ p {
 
 /*   !FEATURE   */
 
-.hidden {
-  display: none;
-}
-
-.column-flexlist {
+.section-list {
   display: flex;
   gap: 24px;
 }
-
+.feature-item {
+  width: 264px;
+}
 .list-title {
   margin-bottom: 8px;
 
@@ -245,21 +244,22 @@ p {
 .filter {
   text-align: center;
 }
-.filter-list .button {
-  padding: 12px 24px;
-}
+
 .filter-list {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
 }
 
 .item-content {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
+.portfolio .item-content {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
 .portfolio-cards {
   display: flex;
   flex-wrap: wrap;
